--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <main class="main">
         <div class="main-top">
             <div class="main-top__close">
-                <object data="/static/close.svg" type=""></object>
+                <object data="{% static 'images/svg/close.svg' %}" type=""></object>
             </div>
         </div>
 
